--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,8 +1,18 @@
+shared:
+  image: centos:centos7
+
 jobs:
-  main:
-    image: centos:centos7
-    requires:
-      - ~pr
-      - ~commit
+  job-1-2:
+    requires: sd@9298:job-1-1
+    steps:
+      - echo: echo hoge
+
+  job-1-3:
+    requires: sd@9298:job-1-1
+    steps:
+      - echo: echo hoge
+
+  job-2-2:
+    requires: sd@9298:job-2-1
     steps:
       - echo: echo hoge
